@@ -360,7 +360,6 @@
       </condition>
       <exec dir="${docs.src}" executable="${forrest.home}/bin/forrest"
             failonerror="true">
-        <env key="JAVA_HOME" value="${java5.home}"/>
       </exec>
       <copy todir="${docs.dir}">
         <fileset dir="${docs.src}/build/site/" />
@@ -369,14 +368,10 @@
              includes="zookeeper-default.xml" style="conf/configuration.xsl"/>
     </target>
 
-    <target name="forrest.check" unless="forrest.home" depends="java5.check">
+    <target name="forrest.check" unless="forrest.home">
       <fail message="'forrest.home' is not defined. Please pass -Dforrest.home=&lt;base of Apache Forrest installation&gt; to Ant on the command-line." />
     </target>
 
-    <target name="java5.check" unless="java5.home">
-      <fail message="'java5.home' is not defined.  Forrest requires Java 5.  Please pass -Djava5.home=&lt;base of Java 5 distribution&gt; to Ant on the command-line." />
-    </target>
-	
     <!-- Javadoc -->
     <target name="javadoc-dev" depends="jar"
             description="Generate javadoc for zookeeper developers">
