@@ -68,10 +68,12 @@
 forrest.validate=true
 forrest.validate.xdocs=${forrest.validate}
 forrest.validate.skinconf=${forrest.validate}
-forrest.validate.sitemap=${forrest.validate}
 forrest.validate.stylesheets=${forrest.validate}
 forrest.validate.skins=${forrest.validate}
 forrest.validate.skins.stylesheets=${forrest.validate.skins}
+
+# Make Forrest work with JDK6
+forrest.validate.sitemap=false
 
 # *.failonerror=(true|false) - stop when an XML file is invalid
 forrest.validate.failonerror=true
